--- a/pages/circles.html
+++ b/pages/circles.html
@@ -4,22 +4,21 @@
     <title>Exercise 4 and 5 </title>
 
     <!-- Stylesheet link -->
-    <link rel="stylesheet" type="text/css" href="css/site-specific.css">
+    <link rel="stylesheet" type="text/css" href="../css/site-specific.css">
 
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
 
     <!-- Loading p5.js library -->
-    <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-
-     <script language="javascript" type="text/javascript" src="js/loop.js"></script>
+    <script language="javascript" type="text/javascript" src="../libraries/p5.js"></script>
+     
+     <script language="javascript" type="text/javascript" src="../js/circles.js"></script>
 
   </head>
   <body>
     <div class="title">
-      <h1>Loop in a Loop</h1>
-      <a href="pages/circles.html">Distance</a>
-    
+      <h1>Distance</h1>
+    <a href="../index.html">Loop In A Loop</a>
     </div>
   </body>
 </html>
